# tickets

./: .gitignore  CMakeLists.txt  LICENSE  README.md  clickable.json  main.cpp  manifest.json.in  tickets.desktop  tickets.desktop.in  tickets_ru_RU.ts
po/: fr.po  nl.po  ru.po  tickets.mikhael.pot
qml/: CityPicker.qml  Settings.qml  WebView.qml  main.qml  qml.qrc  utils.js
qml/components/: DatePicker.qml  FakeTextField.qml  SearchParams.qml  ToolButton.qml
